Fix alignment of stats section
- Make even alignment and spacing
- Add div to html file for log display

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #1a1b25;
+	background-color: #15161e;
 	text-decoration: none;
 	color: #c0caf5;
 	font-family: pixel-fonts;
@@ -89,15 +89,17 @@ p {
 	/* padding-bottom: 0; */
 	/* margin-bottom: 0; */
 	/* margin-top: 0; */
-	/* box-sizing: border-box; */
+	box-sizing: border-box;
 	/* height: 100%; */
 }
 
 .stats > h4 {
 	margin: 0;
-	/* padding: 25px 0; */
-	padding: 25px calc(33.3333% / 3);
-	/* display: flex; */
+	padding: 25px 0;
+	/* padding: 25px calc(33.3333% / 3); */
+	flex: 1;
+	display: flex;
+	justify-content: center;
 }
 
 h4:nth-child(2) {
